--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,15 @@
     ]
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "resend": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
