--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "homepage": "./",
   "name": "el_club_del_filete",
   "private": true,
-  "version": "0.1.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,15 +16,10 @@
     ]
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
-    "resend": "^4.0.1"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
