--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "backend",
+  "name": "club-filete-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
