--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,13 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@vercel/node": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "db-local": "^3.1.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
-    "resend": "^4.0.1",
-    "@vercel/node":"^5.0.1"
+    "resend": "^4.0.1"
   }
 }
