--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-helmet-async": "^2.0.5"
   },
   "scripts": {
     "dev": "vite",
@@ -22,13 +23,6 @@
     "extends": [
       "react-app"
     ]
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^6.27.0",
-    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
