--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,14 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.14",
+    "@vercel/node": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.4.7",
     "express": "^4.18.0",
-    "resend": "^4.0.1",
-    "@vercel/node":"^5.0.1"
+    "jsonwebtoken": "^9.0.2",
+    "resend": "^4.0.1"
   }
 }
