--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@tiptap/extension-color": "^2.11.5",
+    "@tiptap/extension-image": "^2.11.5",
     "@tiptap/extension-text-style": "^2.11.5",
     "@tiptap/extension-underline": "^2.11.5",
+    "@tiptap/extension-youtube": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "lucide-react": "^0.475.0",
