--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,10 +8,8 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "index.js"
-      }
-    ],
-      "headers": [
+        "dest": "index.js",
+        "headers": [
         {
           "source": "/(.*)",
           "headers": [
@@ -34,4 +32,7 @@
           ]
         }
       ]
+      }  
+    ]
+     
   }
