--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,38 +1,21 @@
 {
-    "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js",
+      "headers": {
+      "Access-Control-Allow-Origin": "http://localhost:5173",
+      "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+      "Access-Control-Allow-Headers": "Content-Type, Authorization",
+      "Access-Control-Allow-Credentials": "true"
       }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "index.js",
-        "headers": [
-        {
-          "source": "/(.*)",
-          "headers": [
-            {
-              "key": "Access-Control-Allow-Origin",
-              "value": "http://localhost:5173"
-            },
-            {
-              "key": "Access-Control-Allow-Methods",
-              "value": "GET, POST, OPTIONS, PUT, DELETE"
-            },
-            {
-              "key": "Access-Control-Allow-Headers",
-              "value": "Content-Type, Authorization"
-            },
-            {
-              "key": "Access-Control-Allow-Credentials",
-              "value": "true"
-            }
-          ]
-        }
-      ]
-      }  
-    ]
-     
-  }
+    }  
+  ]
+   
+}
