--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,12 +8,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.js",
-      "headers": {
-      "Access-Control-Allow-Origin": "http://localhost:5173",
-      "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-      "Access-Control-Allow-Headers": "Content-Type, Authorization"     
-    }
+      "dest": "index.js"
     }  
   ]
    
